feat(消息模块): 增加邮件发送支持